--- a/tools_man/ngcp-api-delete.1
+++ b/tools_man/ngcp-api-delete.1
@@ -1,31 +1,34 @@
-.TH NGCP-API 1
+.TH NGCP-API-DELETE 1
 .SH NAME
-sends a delete request to NGCP REST API
+ngcp-api-delete \- sends a delete request to NGCP REST API
 .SH SYNOPSIS
 .B ngcp-api-delete
 [\fB\-v\fR]
 [\fB\-h\fR]
-.IR URL
+.I URL
 .SH DESCRIPTION
 .B ngcp-api-delete
 sends a delete request to NGCP REST API.
 .SH OPTIONS
 .TP
 .BR \-v
-verbose mode.
+Verbose mode.
 .TP
 .BR \-h
-print usage.
+Print usage.
 .TP
-URL
-Url for the request
+.I URL
+URL for the request.
 .SH EXAMPLES
-.TP
-ngcp-api-delete 'https://example.org:1443/api/domains/1'
+.EX
+$ ngcp-api-delete 'https://example.org:1443/api/domains/1'
+.EE
 .SH SEE ALSO
-.TP
-ngcp-api-put(1), ngcp-api-post(1), ngcp-api-patch(1), ngcp-api-get(1)
-.TP
+.BR ngcp-api-put (1),
+.BR ngcp-api-post (1),
+.BR ngcp-api-patch (1),
+.BR ngcp-api-get (1).
+.PP
 https://ngcp-server.domain:1443/api
 .SH COPYRIGHT
 2014 Sipwise Development Team <support@sipwise.com>
