--- a/tools_man/ngcp-api-post.1
+++ b/tools_man/ngcp-api-post.1
@@ -1,42 +1,51 @@
-.TH NGCP-API 1
+.TH NGCP-API-POST 1
 .SH NAME
-sends a post request to NGCP REST API
+ngcp-api-post \- sends a post request to NGCP REST API
 .SH SYNOPSIS
 .B ngcp-api-post
 [\fB\-f\fR \fIFILEPATH\fR]
 [\fB\-v\fR]
 [\fB\-h\fR]
-.IR URL
-[content_type]
+.I URL
+.RI [ CONTENT-TYPE ]
 .SH DESCRIPTION
 .B ngcp-api-post
 sends a post request to NGCP REST API.
 .SH OPTIONS
 .TP
-.BR \-f " " \fIFILEPATH\fR
-use input file instead of stdin.
+.BI \-f " FILEPATH"
+Use
+.I FILEPATH
+as input file instead of stdin.
 .TP
-.BR \-v
-verbose mode.
+.B \-v
+Verbose mode.
 .TP
-.BR \-h
-print usage.
+.B \-h
+Print usage.
 .TP
-URL
-Url for the request
+.I URL
+URL for the request.
 .TP
-content_type
-The default is 'application/json'
+.I CONTENT-TYPE
+Specifies the HTTP content-type.
+The default is
+.RI ' application/json '.
 .SH EXAMPLES
-.TP
-echo '{ "domain" : "test", "reseller_id" : 4 }' \\
+.EX
+$ echo '{ "domain" : "test", "reseller_id" : 4 }' \\
 | ngcp-api-post  https://127.0.0.1:1443/api/domains/
-.TP
-ngcp-api-post -f ../test_post.txt https://127.0.0.1:1443/api/domains/ 'application/json'
+.EE
+.PP
+.EX
+$ ngcp-api-post -f ../test_post.txt https://127.0.0.1:1443/api/domains/ 'application/json'
+.EE
 .SH SEE ALSO
-.TP
-ngcp-api-get(1), ngcp-api-put(1), ngcp-api-patch(1), ngcp-api-delete(1)
-.TP
+.BR ngcp-api-get (1),
+.BR ngcp-api-put (1),
+.BR ngcp-api-patch (1),
+.BR ngcp-api-delete (1).
+.PP
 https://ngcp-server.domain:1443/api
 .SH COPYRIGHT
 2014 Sipwise Development Team <support@sipwise.com>
