--- a/tools_man/ngcp-api-put.1
+++ b/tools_man/ngcp-api-put.1
@@ -1,42 +1,50 @@
-.TH NGCP-API 1
+.TH NGCP-API-PUT 1
 .SH NAME
-sends a put request to NGCP REST API
+ngcp-api-put \- sends a put request to NGCP REST API
 .SH SYNOPSIS
 .B ngcp-api-put
 [\fB\-f\fR \fIFILEPATH\fR]
 [\fB\-v\fR]
 [\fB\-h\fR]
 .IR URL
-[content_type]
+.RI [ CONTENT-TYPE ]
 .SH DESCRIPTION
 .B ngcp-api-put
 sends a put request to NGCP REST API.
 .SH OPTIONS
 .TP
-.BR \-f " " \fIFILEPATH\fR
-use input file instead of stdin.
+.BI \-f " FILEPATH"
+Use
+.I FILEPATH
+as input file instead of stdin.
 .TP
-.BR \-v
-verbose mode.
+.B \-v
+Verbose mode.
 .TP
-.BR \-h
-print usage.
+.B \-h
+Print usage.
 .TP
-URL
-Url for the request
+.I URL
+URL for the request
 .TP
-content_type
+.I CONTENT-TYPE
+Specifies the HTTP content-type.
 The default is 'application/json'
 .SH EXAMPLES
-.TP
-echo '{"body":"test","from_email":"test","name":"test","reseller_id":4,"subject":"test"}'\\
-|ngcp-api-put 'https://example.org:1443/api/emailtemplates/2'
-.TP
-ngcp-api-put -f ../test_put.json https://127.0.0.1:1443/api/domains/ 'application/json'
+.EX
+$ echo '{"body":"test","from_email":"test","name":"test","reseller_id":4,"subject":"test"}'\\
+| ngcp-api-put 'https://example.org:1443/api/emailtemplates/2'
+.EE
+.PP
+.EX
+$ ngcp-api-put -f ../test_put.json https://127.0.0.1:1443/api/domains/ 'application/json'
+.EE
 .SH SEE ALSO
-.TP
-ngcp-api-get(1), ngcp-api-post(1), ngcp-api-patch(1), ngcp-api-delete(1)
-.TP
+.BR ngcp-api-get (1),
+.BR ngcp-api-post (1),
+.BR ngcp-api-patch (1),
+.BR ngcp-api-delete (1).
+.PP
 https://ngcp-server.domain:1443/api
 .SH COPYRIGHT
 2014 Sipwise Development Team <support@sipwise.com>
